fix(MARATHON_EE-1538): Fix service containers host/port empty space.
**MARATHON_EE-1538** This PR fixes the issue when no host/port available the "table" space will be blank causing misalignment.

To test create a service with the following json config then go to the service and expand the service:

```
{
  "id": "/rpgqa/qa1/champion-mastery-memcached",
  "version": "2017-06-07T23:43:24.644Z",
  "containers": [
    {
      "name": "sidecar",
      "exec": {
        "command": {
          "shell": "sleep 10000000000"
        }
      },
      "resources": {
        "cpus": 0.1,
        "mem": 32,
        "disk": 0,
        "gpus": 0
      },
      "image": {
        "kind": "DOCKER",
        "id": "alpine"
      }
    },
    {
      "name": "memcached",
      "exec": {
        "command": {
          "shell": "sleep 1000000000"
        }
      },
      "resources": {
        "cpus": 0.1,
        "mem": 32,
        "disk": 0,
        "gpus": 0
      },
      "endpoints": [
        {
          "name": "main",
          "containerPort": 11211,
          "hostPort": 11211,
          "protocol": [
            "tcp"
          ]
        }
      ],
      "image": {
        "kind": "DOCKER",
        "id": "alpine"
      },
      "user": "root"
    }
  ],
  "networks": [
    {
      "name": "dcos",
      "mode": "container"
    }
  ],
  "scaling": {
    "kind": "fixed",
    "instances": 1
  },
  "scheduling": {
    "backoff": {
      "backoff": 1,
      "backoffFactor": 1.15,
      "maxLaunchDelay": 3600
    },
    "upgrade": {
      "minimumHealthCapacity": 1,
      "maximumOverCapacity": 1
    },
    "killSelection": "YOUNGEST_FIRST",
    "unreachableStrategy": {
      "inactiveAfterSeconds": 300,
      "expungeAfterSeconds": 600
    }
  },
  "executorResources": {
    "cpus": 0.1,
    "mem": 32,
    "disk": 10
  }
}
```

--- a/src/styles/components/expanding-table/styles.less
+++ b/src/styles/components/expanding-table/styles.less
@@ -85,6 +85,10 @@
 
   .expanding-table-child {
 
+    > div {
+      height: 25px;
+    }
+
     &:last-child {
 
       .expanding-table-primary-cell-heading {
